# SW-P1-Product

./: CMakeLists.txt  README.md
TextFiles/: GridMap.txt
src/: CMakeLists.txt  CreateVisualMap.c  CreateVisualMap.h  Move.c  Move.h  MovementOfRobot.h  ReadMapFromFile.c  ReadMapFromFile.h  RobotStruct.c  RobotStruct.h  Test.c  main.c  movementOfRobot.c
